--- a/gettingStarted.html
+++ b/gettingStarted.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <meta name="description" content="CloudOnce - Unified game services API">
+        <meta name="description" content="CloudOnce - Unified Game Services API">
         <meta name="author" content="Jan Ivar Carlsen">
 
         <title>CloudOnce - Getting Started</title>
@@ -65,7 +65,6 @@
                         <li><a href="gettingStarted.html"><i class="nav-icon glyphicon glyphicon-education"></i>Getting Started</a></li>
                         <li><a href="api-docs/index.html"><i class="nav-icon glyphicon glyphicon-book"></i>API Docs</a></li>
                         <li><a href="index.html#content"><i class="nav-icon glyphicon glyphicon-info-sign"></i>About</a></li>
-                        <li><a href="mailto:info@trollpants.com"><i class="nav-icon glyphicon glyphicon-envelope"></i>Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -987,7 +986,6 @@ public class AdvancedCloudSaveExample : MonoBehaviour
                         <li><a href="gettingStarted.html"><i class="nav-icon glyphicon glyphicon-education"></i>Getting Started</a></li>
                         <li><a href="./api-docs/index.html"><i class="nav-icon glyphicon glyphicon-book"></i>API Docs</a></li>
                         <li><a href="index.html#content"><i class="nav-icon glyphicon glyphicon-info-sign"></i>About</a></li>
-                        <li><a href="mailto:info@trollpants.com"><i class="nav-icon glyphicon glyphicon-envelope"></i>Contact</a></li>
                     </ul>
                     <p class="copyright text-muted small">Copyright &copy; Trollpants Game Studio 2015. All Rights Reserved</p>
                 </div>
