--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="CloudOnce - Unified game services API">
+    <meta name="description" content="CloudOnce - Unified Game Services API">
     <meta name="author" content="Jan Ivar Carlsen">
 
     <title>CloudOnce</title>
@@ -62,7 +62,6 @@
                     <li><a href="gettingStarted.html"><i class="nav-icon glyphicon glyphicon-education"></i>Getting Started</a></li>
                     <li><a href="api-docs/index.html"><i class="nav-icon glyphicon glyphicon-book"></i>API Docs</a></li>
                     <li><a href="index.html#content"><i class="nav-icon glyphicon glyphicon-info-sign"></i>About</a></li>
-                    <li><a href="mailto:info@trollpants.com"><i class="nav-icon glyphicon glyphicon-envelope"></i>Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -72,19 +71,16 @@
     <section id="top" class="jumbotron introtron">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 intro-message">
-                    <img src="img/logo_white.png" class="img-responsive center-block" alt="CloudOnce logo">
-                    <h1>CloudOnce</h1>
-                    <h3>Unified Game Services API</h3>
-                    <a class="btn btn-default btn-lg btn-cta dark-shadow" href="https://www.assetstore.unity3d.com/#!/content/35621" role="button">
-                        <img src="img/unity-icon-large.png" alt="Unity icon">&nbsp; Buy on Unity Asset Store
-                    </a>
-                </div>
-                <div class="col-md-6 intro-video">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/dHxmD1_kcgs?origin=http://trollpants.com/cloudonce/" allowfullscreen></iframe>
-                    </div>
-                </div>
+                <img src="img/logo_white.png" class="img-responsive center-block" alt="CloudOnce logo">
+                <h1>CloudOnce</h1>
+                <h3>Unified Game Services API</h3>
+                <a class="btn btn-default btn-lg btn-cta dark-shadow" href="http://github.com/Trollpants/CloudOnce" role="button" style="margin-right:25px;width:175px">
+                    <img src="img/github-icon.png" alt="Unity icon">&nbsp; GitHub
+                </a>
+
+                <a class="btn btn-default btn-lg btn-cta dark-shadow" href="http://u3d.as/fE5" role="button" style="width:175px">
+                    <img src="img/unity-icon-large.png" alt="Unity icon">&nbsp; Asset Store
+                </a>
             </div>
             <div class="row">
                 <div class="row btn-learn-more">
@@ -211,8 +207,12 @@
         <div class="container">
             <div class="row">
                 <img src="img/logo_white.png" class="img-responsive center-block" style="padding-bottom:25px" alt="">
-                <a class="btn btn-default btn-lg btn-cta dark-shadow" href="https://www.assetstore.unity3d.com/#!/content/35621" role="button">
-                    <img src="img/unity-icon-large.png" alt="Unity icon">&nbsp; Buy on Unity Asset Store
+                <a class="btn btn-default btn-lg btn-cta dark-shadow" href="http://github.com/Trollpants/CloudOnce" role="button" style="margin-right:25px;width:175px">
+                    <img src="img/github-icon.png" alt="Unity icon">&nbsp; GitHub
+                </a>
+
+                <a class="btn btn-default btn-lg btn-cta dark-shadow" href="http://u3d.as/fE5" role="button" style="width:175px">
+                    <img src="img/unity-icon-large.png" alt="Unity icon">&nbsp; Asset Store
                 </a>
             </div>
         </div>
@@ -226,7 +226,6 @@
                     <li><a href="gettingStarted.html"><i class="nav-icon glyphicon glyphicon-education"></i>Getting Started</a></li>
                     <li><a href="./api-docs/index.html"><i class="nav-icon glyphicon glyphicon-book"></i>API Docs</a></li>
                     <li><a href="index.html#content"><i class="nav-icon glyphicon glyphicon-info-sign"></i>About</a></li>
-                    <li><a href="mailto:info@trollpants.com"><i class="nav-icon glyphicon glyphicon-envelope"></i>Contact</a></li>
                 </ul>
                 <p class="copyright text-muted small">Copyright &copy; Trollpants Game Studio 2015. All Rights Reserved</p>
             </div>
