Changed copyright and updated URLs

--- a/gettingStarted.html
+++ b/gettingStarted.html
@@ -823,7 +823,7 @@ void PurchaseCoolHat()
                                             <code class="hl-code code-icon namespace-icon">Trollpants.CloudOnce.CloudPrefs</code></a>.
                                         You can then declare cloud variables like this:</p>
                                     <p><code class="language-csharp">CloudInt yourInt = new CloudInt("uniqueID", PersistenceType.persistenceType);</code></p>
-                                    <p>Refer to the <a href="http://www.trollpants.com/cloudonce/api-docs/namespace_trollpants_1_1_cloud_once_1_1_cloud_prefs.html">API documentation</a>
+                                    <p>Refer to the <a href="api-docs/namespace_trollpants_1_1_cloud_once_1_1_cloud_prefs.html">API documentation</a>
                                         for information on each cloud variable type.</p>
                                     <p>Declaring the cloud variables this way will enable you to reset cloud variables back to their starting value, using the Reset method:
                                         <code class="hl-code code-icon method-icon">yourInt.<span class="hl-method">Reset</span>();</code></p>
@@ -987,7 +987,7 @@ public class AdvancedCloudSaveExample : MonoBehaviour
                         <li><a href="./api-docs/index.html"><i class="nav-icon glyphicon glyphicon-book"></i>API Docs</a></li>
                         <li><a href="index.html#content"><i class="nav-icon glyphicon glyphicon-info-sign"></i>About</a></li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Trollpants Game Studio 2015. All Rights Reserved</p>
+                    <p class="copyright text-muted small">Copyright &copy; Jan Ivar Z. Carlsen 2016. All Rights Reserved</p>
                 </div>
             </div>
         </footer>
