--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <h1 class="header-shadow">CloudOnce</h1>
                 <h3 class="header-shadow">Unified Game Services API</h3>
                 <div style="margin-top:25px">
-                    <a class="btn btn-default btn-lg btn-cta dark-shadow" href="http://github.com/Trollpants/CloudOnce" role="button" style="margin-right:25px;width:175px">
+                    <a class="btn btn-default btn-lg btn-cta dark-shadow" href="http://github.com/jizc/CloudOnce" role="button" style="margin-right:25px;width:175px">
                         <img src="img/github-icon.png" alt="Unity icon">&nbsp; GitHub
                     </a>
                     <a class="btn btn-default btn-lg btn-cta dark-shadow" href="http://u3d.as/fE5" role="button" style="width:175px">
@@ -209,7 +209,7 @@
             <div class="row">
                 <img src="img/logo_white.png" class="img-responsive center-block" style="padding-bottom:25px" alt="">
                 <div style="margin-top:25px">
-                    <a class="btn btn-default btn-lg btn-cta dark-shadow" href="http://github.com/Trollpants/CloudOnce" role="button" style="margin-right:25px;width:175px">
+                    <a class="btn btn-default btn-lg btn-cta dark-shadow" href="http://github.com/jizc/CloudOnce" role="button" style="margin-right:25px;width:175px">
                         <img src="img/github-icon.png" alt="Unity icon">&nbsp; GitHub
                     </a>
                     <a class="btn btn-default btn-lg btn-cta dark-shadow" href="http://u3d.as/fE5" role="button" style="width:175px">
@@ -229,7 +229,7 @@
                     <li><a href="./api-docs/index.html"><i class="nav-icon glyphicon glyphicon-book"></i>API Docs</a></li>
                     <li><a href="index.html#content"><i class="nav-icon glyphicon glyphicon-info-sign"></i>About</a></li>
                 </ul>
-                <p class="copyright text-muted small">Copyright &copy; Trollpants Game Studio 2015. All Rights Reserved</p>
+                <p class="copyright text-muted small">Copyright &copy; Jan Ivar Z. Carlsen 2016. All Rights Reserved</p>
             </div>
         </div>
     </footer>
