Removed Asset Store buttons

--- a/index.html
+++ b/index.html
@@ -75,11 +75,8 @@
                 <h1 class="header-shadow">CloudOnce</h1>
                 <h3 class="header-shadow">Unified Game Services API</h3>
                 <div style="margin-top:25px">
-                    <a class="btn btn-default btn-lg btn-cta dark-shadow" href="http://github.com/jizc/CloudOnce" role="button" style="margin-right:25px;width:175px">
+                    <a class="btn btn-default btn-lg btn-cta dark-shadow" href="http://github.com/jizc/CloudOnce" role="button" style="width:175px">
                         <img src="img/github-icon.png" alt="Unity icon">&nbsp; GitHub
-                    </a>
-                    <a class="btn btn-default btn-lg btn-cta dark-shadow" href="http://u3d.as/fE5" role="button" style="width:175px">
-                        <img src="img/unity-icon-large.png" alt="Unity icon">&nbsp; Asset Store
                     </a>
                 </div>
             </div>
@@ -209,11 +206,8 @@
             <div class="row">
                 <img src="img/logo_white.png" class="img-responsive center-block" style="padding-bottom:25px" alt="">
                 <div style="margin-top:25px">
-                    <a class="btn btn-default btn-lg btn-cta dark-shadow" href="http://github.com/jizc/CloudOnce" role="button" style="margin-right:25px;width:175px">
+                    <a class="btn btn-default btn-lg btn-cta dark-shadow" href="http://github.com/jizc/CloudOnce" role="button" style="width:175px">
                         <img src="img/github-icon.png" alt="Unity icon">&nbsp; GitHub
-                    </a>
-                    <a class="btn btn-default btn-lg btn-cta dark-shadow" href="http://u3d.as/fE5" role="button" style="width:175px">
-                        <img src="img/unity-icon-large.png" alt="Unity icon">&nbsp; Asset Store
                     </a>
                 </div>
             </div>
