Fixed iTunes Connect link

--- a/gettingStarted.html
+++ b/gettingStarted.html
@@ -99,9 +99,9 @@
                             <div class="col-md-4">
                                 <h4 class="idList idList-GameCenter">Apple</h4>
                                 <p>
-                                    <a href="https://developer.apple.com/membercenter">Apple Developer Member Center</a>
+                                    <a href="https://developer.apple.com/account/">Apple Developer</a>
                                     <br>
-                                    <a href="https://itunesconnect.apple.com/WebObjects/iTunesConnect.woa">iTunes Connect</a>
+                                    <a href="https://itunesconnect.apple.com/">iTunes Connect</a>
                                 </p>
                             </div>
                             <div class="col-md-4">
