Removed GameCircle info

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="row">
                 <div class="col-md-6 col-sm-push-6">
                     <h2 class="section-heading">Unified API</h2>
-                    <p class="lead">CloudOnce works for the Apple Game Center, Google Play Game Services and Amazon GameCircle using the same few lines of code. Our <a href="gettingStarted.html">Getting Started guide</a> and extensive <a href="./api-docs/index.html">API documentation</a> will get you through the implementation in a flash.</p>
+                    <p class="lead">CloudOnce works for the Apple Game Center and Google Play Game Services using the same few lines of code. Our <a href="gettingStarted.html">Getting Started guide</a> and extensive <a href="./api-docs/index.html">API documentation</a> will get you through the implementation in a flash.</p>
                 </div>
                 <div class="col-md-6 col-sm-pull-6">
                     <img class="img-responsive" src="img/2_Unified.png" alt="Unified API">
